third_party/WebKit/Source/core/dom/Element.cpp
@@ -1899,6 +1899,8 @@ PassRefPtr<ComputedStyle> Element::propagateInheritedProperties(
     StyleRecalcChange change) {
   if (change != IndependentInherit)
     return nullptr;
+  if (isPseudoElement())
+    return nullptr;
   if (needsStyleRecalc())
     return nullptr;
   if (hasAnimations())
